# ThoughtGrove

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  product_documentation.md  pyproject.toml  rules.md
docs/: cursor_rules.md  test_guide.md  todo.md  work_log.md
static/: manifest.json  offline.html  sw.js
static/css/: main.css  styles.css
static/js/: main.js  service-worker.js
templates/: index.html  layout.html  login.html  note_detail.html  note_editor.html  notes_list.html  offline.html  register.html
tests/: conftest.py  test_main.py
tests/api/: test_auth.py  test_notes.py
tests/crud/: test_note.py
tests/models/: test_note.py  test_note_model.py  test_user.py
tests/utils/: test_datetime.py
thoughtgrove/: main.py  pages.py
thoughtgrove/api/: auth.py  notes.py  users.py
thoughtgrove/core/: config.py  deps.py  security.py
thoughtgrove/crud/: note.py  user.py
thoughtgrove/db/: mongodb.py
thoughtgrove/models/: base.py  note.py  token.py  user.py
thoughtgrove/utils/: datetime.py
